feat: categories stuff
